--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     src: 
     url('../fonts/Raleway-Regular.ttf')  format('ttf');
     font-weight: 400;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     src:
     url('../fonts/Raleway-Bold.ttf') format('ttf');
     font-weight: 700;
