--- a/styles/global.css
+++ b/styles/global.css
@@ -1,21 +1,353 @@
+body {
+    align-items: center;
+    justify-content: center;
+    font-family: 'Raleway';
+    width: 1100px;
+    height: 3028px;
+}
+
 header{
     background-color: white;
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items:center;
-    top: 80px;
-    bottom: 30px;
+    padding: 50px;
 }
 
-.nav-header{
+.nav_header{
     display: flex;   
-    margin: auto;
     gap: 15px;
+    color: black;
+    font-size: 16px;
+    padding: 0;
+    margin: 0;
+}
+
+.nav_header li{
+    display: inline-flex;
     list-style: circle;
+}
+
+.header_logo{
+    position: relative;
+    width: 100px;
+    height: 100px;
+}
+
+.header_logo img {
+    position: absolute;
+    width: 100%;
+    height: auto;
 }
 
 address{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    text-align: right;
+    font-size: 12px;
+    line-height: 1.5;
+    margin-left: 40px;
+}
+
+cover{
+    display: flex;
+    background-image: url('../images/lotus-flower.png');
+    color: #ffffff;
+    background-size: cover;
+    background-position: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    min-height: 757px;
+}
+
+.cover_overlay{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    inset: 0;
+    z-index: 0;
+}
+
+.main_cover_text{
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    font-size: 40px;
+    font-weight: bold;
+    letter-spacing: 30px;
+    gap: 20px;
+    text-align: left;
+    align-items: flex-start;
+}
+
+.main_cover_left{
+    margin-left: 20px;
+}
+
+.main_cover_center{
+    text-align: center;
+    margin-left: 380.5px;
+}
+
+.main_cover_right{
+    text-align: right;
+    margin-left: 663px;
+}
+
+.description{
+    display: flex;
+    align-self: end;
+    top: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
+.description_subtitle{
+    font-size: 14px;
+    letter-spacing: 5px;
+    margin: 0;
+    text-transform: uppercase;
+    text-align: left;
+    margin-left: 10px;
+}
+
+.main-button{
+    border: 1px solid white;
+    padding: 12px 25px;
+    font-size: 14px;
+    text-decoration: none;
+    text-transform: uppercase;
+    background: transparent;
+    color: white;
+    margin-left: 20%;
+}
+
+.lots {
+    padding-top: 50px;
+    width: 1050px;
+}
+
+
+.lots__heading{
+    margin-left: 20px;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+
+.lots__card-list{
+    display: flex;
+    gap: 40px;
+    list-style: none;
+    position: relative;
+}
+
+.lots__card-list-item{
+    position: relative;
+    display: flex;
+    width: 334px;
+    height: 596px;
+}
+
+.card_link {
+    text-decoration: none;
+}
+
+.card{
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    color: #ffffff;
+    width: 334px;
+    height: 100%;
+    position: relative;
+    padding: 20px;
+}
+
+.card_type_film{
+    display: flex;
+    background-image: url('../images/lot1.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 334px;
+    height: 596px;
+}
+
+.card_type_book{
+    background-image: url('../images/lot2.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 334px;
+    height: 596px;
+}
+
+.card_type_picture{
+    background-image: url('../images/lot3.png');
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+    width: 334px;
+    height: 596px;
+}
+
+.card_title,
+.card_text {
+    position: relative;
+    z-index: 2;
+}
+
+.card_title{
+    display: block;
+    font-weight: 700;
+    font-size: 22px;
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    justify-self: center;
+}
+
+.card_text{
+    line-height: 120%;
+    font-size: 20px;
+    word-wrap: break-word;
+    align-self: end;
+}
+
+.lots__look-more-link{
+    margin-top: 20px;
+    padding-left: 40px;
+    font-size: 20px;
+}
+
+about {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 60px 0;
+}
+
+.about__column{
+    display: flex;
+    gap: 60px;
+}
+
+.about__logo{
+    width: 230px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.about__logo-image_ellipse{
+    width: 150px;
+    height: 150px;
+}
+
+.about__logo-image{
+    position: relative;
+    width: 130px;
+    height: 130px;
+    z-index: 2;
+}
+
+.about__logo-image img{
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.about__text_block{
+    max-width: 600px;
+    color: #000000;
+}
+
+.about__title a{
+    font-size: 32px;
+    font-weight: 700;
+    text-decoration: none;
+    color: #000;
+}
+
+.about__text{
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 120%;
+}
+
+.about__text p{
+    margin: 0 0 16px 0;
+    word-wrap: break-word;
+}
+
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding: 40px;
+    max-width: 1100px;
+    margin: auto;
+}
+
+contacts{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+contacts a{
+    font-size: 13px;
+    color: #000;
+    text-decoration: none;
+}
+
+.nav_footer{
+    display: flex;
+}
+
+.footer__menu-list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.footer__menu-link,
+.footer__menu-link_active{
+    font-size: 14px;
+    color: #000;
+    text-decoration: none;
+}
+
+.footer__menu-link_active{
+    text-decoration: underline;
+}
+
+.footer__social-list{
+    display: flex;
+    gap:20px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer__social-list-item{
+    display: flex;
+    gap:20px;
+    list-style: none;
+}
+
+.footer__social-icon{
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
 }
